added tagline, bottom options

--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<link href='http://fonts.googleapis.com/css?family=Crimson+Text' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Prata' rel='stylesheet' type='text/css'>
-	
+	<link href='http://fonts.googleapis.com/css?family=Metamorphous' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="/testbed/bookstarts/sass/normalize-sass/stylesheets/screen.css" type='text/css'>	
 </head>
 <body>
 <section class="container">
  	<section class="title">
-		<h1>BOOKSTART</h1>
-		<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" width="512px" height="512px" viewBox="0 0 512 512" enable-background="new 0 0 512 512" xml:space="preserve">
+		<div "logo-wrap">
+			<h1>BOOKSTART</h1>
+			<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" width="512px" height="512px" viewBox="0 0 512 512" enable-background="new 0 0 512 512" xml:space="preserve">
 			<polygon id="bookmark-icon" points="96,0 96,512 256,352 416,512 416,0"/></svg>
-	</section>	
+			</div>	
+		<span class="tagline">The start of your next great read</span>
+	</section>
 	<section class="main-content">
-
-
 		<div class="introduction">
 		 		<!-- <section class="details">
 		 			<div class="book-author">Thomas Hardy</div>
@@ -25,21 +26,21 @@
 		 		</section> -->	
 		 		<p>The schoolmaster was leaving the village, and everybody seemed sorry. The miller at Cresscombe lent him the small white tilted cart and horse to carry his goods to the city of his destination, about twenty miles off, such a vehicle proving of quite sufficient size for the departing teacher's effects. For the schoolhouse had been partly furnished by the managers, and the only cumbersome article possessed by the master, in addition to the packing-case of books, was a cottage piano that he had bought at an auction during the year in which he thought of learning instrumental music. But the enthusiasm having waned he had never acquired any skill in playing, and the purchased article had been a perpetual trouble to him ever since in moving house.</p>
 		</div>	
-	</section> <!-- end main content -->
-	<div class="options">
+		<div class="options">
 		<div class="book-details">
-			<div class="side-wrapper"></div>
 			<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" width="512px" height="512px" viewBox="0 0 512 512" enable-background="new 0 0 512 512" xml:space="preserve">
 			<path id="book-12-icon" d="M282.655 389.151c-11.47 0-20.773-9.303-20.773-20.777c0-11.469 9.304-20.768 20.773-20.768 c11.473 0 20.8 9.3 20.8 20.768C303.428 379.8 294.1 389.2 282.7 389.151z M280.824 199.1 c41.294 0 59.9 27.7 59.9 53.59c0 41.277-41.696 48.449-41.696 75.07v3.738c0 0-31.145 0-34.243 0v-3.738 c0-10.572 1.542-24.138 13.819-35.931c12.277-11.794 27.619-21.536 27.619-36.271c0-16.288-11.304-24.904-25.557-24.904 c-23.75 0-25.301 24.631-25.887 30.055h-33.306C222.321 235 233.2 199.1 280.8 199.089z M124 122.5 c-23.611 0-23.611-34.528 0-34.528c16.904 0 324 0 324 0V50H114c-27.613 0-50 22.386-50 50v312c0 27.6 22.4 50 50 50h334 V122.528C443.018 122.5 143.1 122.5 124 122.528z M408 422H155.527V163.098H408V422z"/>
 			</svg>		
-			<!-- <p>WHOH!<br>What's this?</p> -->	
-		</div><div class="next-book">
+			<!-- <p>WHOH!</p>	 -->
+		</div><div class="next-book"> <!-- KEEP THESE TOGETHER - WEIRD SPACE BUG -->
 			<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" width="512px" height="512px" viewBox="0 0 512 512" enable-background="new 0 0 512 512" xml:space="preserve">
 			<path id="note-13-icon" d="M353.012 302.715H158.988v-30h194.023V302.715z M352.979 237.298h-193.99v-30h193.99V237.298z M352.979 171.965h-193.99v-30h193.99V171.965z M116.333 422V90h279.334c0 0 0 186.3 0 218.1 c0 63.121-77.928 37.833-77.928 37.833s23.859 76.092-35 76.092C250.677 422 234.7 422 116.3 422z M435.667 311.528V50H76.333 v412h207.016C351.514 462 435.7 372.9 435.7 311.528z"/>
 			</svg>
-		<!-- <p>BORING <br>Something else.</p> -->	
+		<!-- <p>NO!</p>	 -->
 		</div> 	
 	</div>
+	</section> <!-- end main content -->
+	
 </section>	
 </body>
 </html>
